Added Flashlight Mechanic (WIP)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/TestMap.TestMap
 EditorStartupMap=/Game/Maps/TestMap.TestMap
 GlobalDefaultGameMode=/Game/Player/PlayerGB.PlayerGB_C
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
