--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,6 @@
 
 
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=CF70E7D34268B0C222C043A225413BF7
+ProjectID=1B620855461F0A8C84658DA51433200B
+ProjectVersion=0.1
+
