--- a/FazbearWarehouse.uproject
+++ b/FazbearWarehouse.uproject
@@ -12,6 +12,13 @@
 				"Win64",
 				"Linux"
 			]
+		},
+		{
+			"Name": "GameJoltAPI",
+			"Enabled": true
 		}
+	],
+	"TargetPlatforms": [
+		"WindowsNoEditor"
 	]
 }
